shesmu-server/src/test/resources/bad/interpolation-tuple.shesmu
Define standard_execution()
  Where "{ius}" != "";
